src/test/deca/codegen/invalid/homemade/Factorial_nocheck.res
24
1409286144
  ** IMA ** ERREUR ** Ligne 82 : 
    PUSH : Debordement de la pile
